@@ -234,8 +234,8 @@ Matrix m3g:: make_parallel_projection_matrix    (float height, float aspect_rati
 {
     float  width = height * aspect_ratio;
     Matrix proj;
-    proj[0]  = 1/width;
-    proj[5]  = 1/height;
+    proj[0]  = 2/width;
+    proj[5]  = 2/height;
     proj[10] = -2/(far-near);
     proj[11] = -(near+far)/(far-near);
     proj[15] = 1;
